* [FS#1079] Apply URL TV patch to Doc Manager module
* [#MODX-218] Fix broken image paths in Newspublisher snippet
* [#MODX-266] Stop .svn folder appearing on help screen if MODx install was checked out from SVN
* [FS#1076] [FS#853] Fix calendar JS error occurring if calendar TV name contains an hyphen
* Updated TinyMCE to version 3.2.0.1

MODx 0.9.6.2 (rev 4076 - September 15, 2008)
====================================
* [#MODX-178] Captcha fails when there is a non-TTF file in the /ttf folder.
* Implement Captcha workaround for imagettfbbox() error in Windows requiring absolute path in fontfile parameter.
* [#MODX-289] Fixed MODx Parse Error in module dependencies tab. (4069)
* [#MODX-185] SET NAMES vs SET CHARACTER SET issue resolved; preferred method can be specified at installation.
* Added <small>(ID)</small> markup to resource list so resources saved without a name can be easily accessed.
* [#MODX-246] Cannot create database with reserved MySQL characters (not properly escaped).
* [#MODX-163] - Fix issue with context menu closing in FF3 on right click.
* Fix to alphabetical sorting in MCPUCK browser (3938)
* Fix parser error in Doc Manager when setting document permissions if using the tree to sort documents (3913)
* [#MODX-176] XSS vulnerability in mcpuk resource browser; fixed problem in GET parameter "editorpath" (3896)
* Modified MAGPIE_CACHE_DIR to store RSS cache in assets/cache/rss (3893)
* [#MODX-206] Vulnerability with CSRF (Cross Site Request Forgery); added configurable http referer validation option (3871)
* [#MODX-164] The keywords cannot be saved on manager.  See also, FS#1055 in old bug tracker. (3389)
* [#MODX-159] installer style fix (3836)
* [#MODX-183] fixes database creation problem - fix provided by sottwell (3825)
* Updated TinyMCE to v3.1.0.1a (3824)
* Updated Russian language files (thanks to Safronovich Victor)